# fastplume

./: .gitignore  CMakeLists.txt  CSVParser.hpp  DispersionData.cpp  DispersionData.cpp_bk  Dust_Case_Definitions_2024-08-16.csv  README.md  SigmaInterp.hpp  build.sh  config.py  dispersion_coefficients_corrected.h  log_fitting.py  main.cpp  plume_10-28-0930.py  preprocessing.py  processed_coefficients.csv
example/: Makefile  evp_fp_out_001.csv  evp_fp_out_002.csv  evp_fp_out_003.csv  evp_fp_out_004.csv  evp_fp_out_005.csv  evp_fp_out_006.csv  evp_fp_out_007.csv  evp_fp_out_008.csv  evp_fp_out_009.csv  evp_fp_out_010.csv  evp_fp_out_011.csv  evp_fp_out_012.csv  evp_fp_out_013.csv  evp_fp_out_014.csv  evp_fp_out_015.csv  evp_fp_out_016.csv  evp_fp_out_017.csv  evp_fp_out_018.csv  evp_fp_out_019.csv  evp_fp_out_020.csv  evp_fp_out_021.csv  example.cpp
example/data/: taskData.csv
example/data/locs/: xyzt_10.csv  xyzt_11.csv  xyzt_16.csv  xyzt_24.csv  xyzt_25.csv  xyzt_31.csv  xyzt_34.csv  xyzt_52.csv  xyzt_62.csv
fixture/: agent_properties.csv  hpac_dispersion_coefs.csv
include/: FastPlume.h  FastPlumeImpl.h  agentProperties.h  dispersionCoef.h  dustIntegralTable.h  jsonHandler.h  mathUtil.h  stringUtil.h  taskConfig.h  taskData.h  taskDataRow.h  taskEvapData.h  taskEvapDataRow.h
jobs/Dust/2024-17-15/: result  run_dust
jobs/Dust/2024-17-15/jobFile/: dust.cpp
jobs/Dust/2024-17-15/locFiles/: xyzt_13.csv  xyzt_22.csv  xyzt_44.csv  xyzt_53.csv
jobs/Dust/2024-17-15/outputFiles/: dust_fp_out_001.csv  dust_fp_out_002.csv  dust_fp_out_003.csv  dust_fp_out_004.csv  dust_fp_out_005.csv  dust_fp_out_006.csv  dust_fp_out_007.csv  dust_fp_out_008.csv  dust_fp_out_009.csv  dust_fp_out_010.csv  dust_fp_out_011.csv  dust_fp_out_012.csv  dust_fp_out_013.csv  dust_fp_out_014.csv  dust_fp_out_015.csv  dust_fp_out_016.csv  dust_fp_out_017.csv  dust_fp_out_018.csv  dust_fp_out_019.csv  dust_fp_out_020.csv  dust_fp_out_021.csv  dust_fp_out_022.csv  dust_fp_out_023.csv  dust_fp_out_024.csv  dust_fp_out_025.csv  dust_fp_out_026.csv  dust_fp_out_027.csv  dust_fp_out_028.csv  dust_fp_out_029.csv  dust_fp_out_030.csv  dust_fp_out_031.csv  dust_fp_out_032.csv
jobs/Dust/2024-17-15/taskFile/: Dust_Case_Definitions_2024-17-15.csv
jobs/Evp/2024-07-11/: result  run_evp
jobs/Evp/2024-07-11/jobFile/: evp.cpp
jobs/Evp/2024-07-11/locFiles/: xyzt_12.csv  xyzt_15.csv  xyzt_20.csv  xyzt_21.csv  xyzt_33.csv  xyzt_35.csv
jobs/Evp/2024-07-11/outputFiles/: Evp_Runs_2024-07-11_out.csv  evp_fp_out_001.csv  evp_fp_out_002.csv  evp_fp_out_003.csv  evp_fp_out_004.csv  evp_fp_out_005.csv  evp_fp_out_006.csv  evp_fp_out_007.csv  evp_fp_out_008.csv  evp_fp_out_009.csv  evp_fp_out_010.csv  evp_fp_out_011.csv  evp_fp_out_012.csv  evp_fp_out_013.csv  evp_fp_out_014.csv  evp_fp_out_015.csv  evp_fp_out_016.csv  evp_fp_out_017.csv  evp_fp_out_018.csv  evp_fp_out_019.csv  evp_fp_out_020.csv  evp_fp_out_021.csv
jobs/Evp/2024-07-11/taskFile/: Evp_Case_Definitions_2024-07-15.csv  Evp_Runs_2024-07-11.csv
jobs/SEM/2024-07-19/: result  run_sem
jobs/SEM/2024-07-19/jobFile/: sem.cpp
jobs/SEM/2024-07-19/locFiles/: xyzt_hires_10.csv  xyzt_hires_11.csv  xyzt_hires_12.csv  xyzt_hires_13.csv  xyzt_hires_15.csv  xyzt_hires_16.csv  xyzt_hires_20.csv  xyzt_hires_21.csv  xyzt_hires_22.csv  xyzt_hires_23.csv  xyzt_hires_24.csv  xyzt_hires_25.csv  xyzt_hires_26.csv  xyzt_hires_31.csv  xyzt_hires_32.csv  xyzt_hires_33.csv  xyzt_hires_34.csv  xyzt_hires_35.csv  xyzt_hires_42.csv  xyzt_hires_43.csv  xyzt_hires_44.csv  xyzt_hires_52.csv  xyzt_hires_53.csv  xyzt_hires_62.csv  xyzt_hires_63.csv
jobs/SEM/2024-07-19/outputFiles/: sem_fp_out_000.csv  sem_fp_out_001.csv  sem_fp_out_002.csv  sem_fp_out_003.csv  sem_fp_out_004.csv  sem_fp_out_005.csv  sem_fp_out_006.csv  sem_fp_out_007.csv  sem_fp_out_008.csv  sem_fp_out_009.csv  sem_fp_out_010.csv  sem_fp_out_011.csv
jobs/SEM/2024-07-19/taskFile/: Sem_Case_Definitions_2024-07-19.csv
src/: FastPlume.cpp  FastPlumeImpl.cpp  JsonInputHandler.cpp  SigmaInterp.cpp  agentProperties.cpp  dispersionCoef.cpp  dustIntegralTable.cpp  jsonHandler.cpp  main.cpp  mathUtil.cpp  stringUtil.cpp  taskData.cpp  taskEvapData.cpp
tests/: .gitignore  Dust_Case.json  Dust_Case_new.json  Evp_virtual.json  evp_fp_out_001.csv  evp_fp_out_002.csv  evp_fp_out_003.csv  evp_fp_out_004.csv  evp_fp_out_005.csv  evp_fp_out_006.csv  evp_fp_out_007.csv  evp_fp_out_008.csv  evp_fp_out_009.csv  evp_fp_out_010.csv  evp_fp_out_011.csv  evp_fp_out_012.csv  evp_fp_out_013.csv  evp_fp_out_014.csv  evp_fp_out_015.csv  evp_fp_out_016.csv  evp_fp_out_017.csv  evp_fp_out_018.csv  evp_fp_out_019.csv  evp_fp_out_020.csv  evp_fp_out_021.csv
tests/location_files/: grid_loc_(0.8,A).tab  grid_loc_(0.8,B).tab  grid_loc_(0.8,C).tab  grid_loc_(0.8,D).tab  grid_loc_(0.8,F).tab  grid_loc_(0.8,G).tab  grid_loc_(12.0,C).tab  grid_loc_(12.0,D).tab  grid_loc_(2.3,A).tab  grid_loc_(2.3,B).tab  grid_loc_(2.3,C).tab  grid_loc_(2.3,D).tab  grid_loc_(2.3,E).tab  grid_loc_(2.3,F).tab  grid_loc_(2.3,G).tab  grid_loc_(4.1,B).tab  grid_loc_(4.1,C).tab  grid_loc_(4.1,D).tab  grid_loc_(4.1,E).tab  grid_loc_(4.1,F).tab  grid_loc_(6.7,C).tab  grid_loc_(6.7,D).tab  grid_loc_(6.7,E).tab  grid_loc_(9.6,C).tab  grid_loc_(9.6,D).tab  xyzt_23.csv  xyzt_26.csv  xyzt_32.csv  xyzt_42.csv  xyzt_43.csv  xyzt_63.csv
tests/xyzt/: xyzt_(0,0).csv  xyzt_(0,1).csv  xyzt_(0,2).csv  xyzt_(0,3).csv  xyzt_(0,5).csv  xyzt_(0,6).csv  xyzt_(1,0).csv  xyzt_(1,1).csv  xyzt_(1,2).csv  xyzt_(1,4).csv  xyzt_(1,5).csv  xyzt_(2,1).csv  xyzt_(2,2).csv  xyzt_(2,3).csv  xyzt_(2,4).csv  xyzt_(2,5).csv  xyzt_(3,2).csv  xyzt_(3,4).csv  xyzt_(4,2).csv  xyzt_(4,3).csv  xyzt_(5,2).csv
